--- a/gb/25/1/5/n14406155.md
+++ b/gb/25/1/5/n14406155.md
@@ -7,7 +7,7 @@
 <hr>
 <p>【大纪元2025年01月05日讯】（大纪元记者简惠敏台湾屏东报导）屏东县政府举办学校营养午餐创意料理秀，历经初选、实作竞赛及网路票选，最后由玛家国中营养师张文琴、厨师张秀妹联手设计与料理的菜单，夺下第二届“屏东厨神争霸战”冠军，4日举行颁奖典礼。</p>
 <p>屏东县政府上学年举办首届厨神争霸战，受到学生热烈回响，本学年第二次举办，在初选中以书面审查的方式，将学童所需要的午餐热量、营养、菜色搭配及创意都纳入评选项目。</p>
-<figure id="attachment_14406157" aria-describedby="caption-attachment-14406157" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14406157-736525.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14406157" src="https://i.epochtimes.com/assets/uploads/2025/01/id14406157-736525-600x463.jpg" alt="" width="600" b="463" /></a><figcaption id="caption-attachment-14406157" class="wp-caption-text">屏东县政府举办第二届屏东厨神争霸战－学校营养午餐创意料理秀。（屏东县政府提供）</figcaption></figure>
+<figure id="attachment_14406157" aria-describedby="caption-attachment-14406157" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/01/id14406157-736525.jpg" rel="nofollow"><img loading="lazy" decoding="async" class="size-large wp-image-14406157" src="https://i.epochtimes.com/assets/uploads/2025/01/id14406157-736525-600x463.jpg" alt="" width="600" b="463"></a><figcaption id="caption-attachment-14406157" class="wp-caption-text">屏东县政府举办第二届屏东厨神争霸战－学校营养午餐创意料理秀。（屏东县政府提供）</figcaption></figure>
 <p>屏东县政府举办第二届屏东厨神争霸战－学校营养午餐创意料理秀。（屏东县政府提供）<br />
 在12强决赛中，入选的各校代表都要在时间内完成营养午餐的实作，与在地食材搭配出的创意料理，最后由专家学者、校园营养师及儿少代表担任评审进行评选，而最关键的是全县高国中小学生的网路票选结果，产生最终优胜队伍。</p>
 <p>今年第一名玛家国中，获得37.8%的票数，主食是蒜香斜管意大利面，搭配义式肉酱、玉膳章鱼烧、红藜乳酪绿花椰和金黄秋收汤，异国料理融入原住民的传统食材，令人食指大动。</p>
@@ -16,33 +16,33 @@
 <p>县府教育处表示，第一名玛家国中，获得奖金5万元；第二名高树国小及中正国小，各得奖金3万元；第三名高树国中、里港国中及万丹国小，各得奖金2万元；佳作有潮州国小、力里国小及东新国中，各1万元奖金。获奖的12组队伍菜单，将在下学期纳入营养午餐菜单，由各校选择并供应给学童。</p>
 <p>责任编辑：陈玟绮</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14587214.md#1">银发乐活日登场 罗斯密社区共享健康资源</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585212.md#1">柑县台美商会联谊 近百人参与交流</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585196.md#1">台美人历史协会9月邀民众抗老保健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/1/n14585123.md#1">彰女校友9/18南加餐叙 疫后重启 欢迎报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11208751.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(4)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/20/n4014880.md#1" target="_blank">修炼人的故事：从地狱到天堂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/15/n11045840.md#1" target="_blank">晓明：1968年广西阳朔杀惨案回顾</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/9/15/n2263295.md#1" target="_blank">调查报告：法轮功与健康</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588482.md#1">四连血月不寻常？（1）史上最吸睛的例子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/4/n14587600.md#1">英电视名人拍到UFO：金色光球在空中盘旋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/7/n14068727.md#1">白露节气到 养生小心哪些禁忌“补露”怎么补？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14587147.md#1">【未解之谜】1300年的西藏风水局 牵出仓央嘉措的前世秘密</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/3/n14586680.md#1">七月十五中元节 怎么看待“鬼月”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590147.md#1">【纪元焦点】俄最大规模空袭 川普考虑二级制裁</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14590151.md#1">【军事情报局】美军击沉委快艇 巡洋舰部署前线</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589531.md#1">【重播】川普观看美网男子单打决赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588945.md#1">美为何突击现代汽车电池厂 一文看懂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588990.md#1">中国上千台打印机失控 狂印骂人字句</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588959.md#1">海底惊现“秘密淡水” 或为干渴世界带来希望</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588643.md#1">赵丽颖缘何走红？香港导演王晶析原因</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588969.md#1">肖战为何能主演《藏海传》 郑晓龙透拍摄秘辛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588626.md#1">黄子韬首度公开情定徐艺洋内幕 遭陈乔恩吐槽</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/5/n14588592.md#1">易烊千玺自曝身体吃不消 宣布巡回演唱会收官</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589017.md#1">第82届威尼斯影展落幕 陆女星辛芷蕾夺得影后</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/7/n14589116.md#1">英前警探：车祸时不要说这句话 以免赔大钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588814.md#1">猫也会罹患失智症？ 专家：有8个迹象</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589839.md#1">网上流传的“机场理论”挑战 会让你错过航班</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/8/n14589691.md#1">心理治疗师：压力会传染且影响他人健康</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/6/n14588902.md#1">飞越历史与自然 哈德逊河谷热气球节采风</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/5/n14406155.htm">屏东学校营养午餐创意料理赛 玛家国中夺冠</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406155.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
